--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ jobs:
           distribution: temurin
           java-version: ${{ matrix.java }}
       - name: Execute Gradle build
-        run: ./gradlew clean assembleDebug -Dscan.tag.H${{ matrix.java }}-temurin
+        run: ./gradlew clean assembleDebug -Dscan.tag.H${{ matrix.java }}-temurin -Dscan.tag.NO_TOOLCHAIN_NO_WORKAROUND
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_API_KEY }}
           AGENT_JAVA_VERSION: "${{ matrix.java }}-temurin"
@@ -43,7 +43,7 @@ jobs:
           java-version: ${{ matrix.java }}
       - name: Execute Gradle build
         run: |
-             ./gradlew clean assembleDebug -Dscan.tag.H${{ matrix.java }}-zulu
+             ./gradlew clean assembleDebug -Dscan.tag.H${{ matrix.java }}-zulu -Dscan.tag.NO_TOOLCHAIN_NO_WORKAROUND
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_API_KEY }}
           AGENT_JAVA_VERSION: "${{ matrix.java }}-zulu"
@@ -73,7 +73,7 @@ jobs:
           java-version: ${{ matrix.java }}
       - name: Execute Gradle build
         run: |
-            ./gradlew clean assembleDebug -Dscan.tag.H${{ matrix.java }}-liberica
+            ./gradlew clean assembleDebug -Dscan.tag.H${{ matrix.java }}-liberica -Dscan.tag.NO_TOOLCHAIN_NO_WORKAROUND
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_API_KEY }}
           AGENT_JAVA_VERSION: "${{ matrix.java }}-liberica"
