--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,6 +8,8 @@ jobs:
       matrix:
         java: [17.0.8+101]
     runs-on: ubuntu-latest
+    container:
+      image: gcr.io/cache-node/android-builder-jemalloc:0.2
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
@@ -16,10 +18,6 @@ jobs:
           java-version: ${{ matrix.java }}
       - name: Execute Gradle build
         run: |
-          curl -L "https://github.com/jemalloc/jemalloc/releases/download/5.3.0/jemalloc-5.3.0.tar.bz2" -o jemalloc.tar.bz2
-          tar -xf jemalloc.tar.bz2
-          (cd jemalloc-5.3.0/ && ./configure && make && make install)
-          ENV LD_PRELOAD /usr/local/lib/libjemalloc.so
           ./gradlew clean assembleDebug -Dscan.tag.H${{ matrix.java }}-temurin -Dscan.tag.WORKAROUND_AGP_8.2.2_NEW
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_API_KEY }}
