--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,9 +37,17 @@ jobs:
       image: ${{ needs.setup-build-environment.outputs.image }}
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-java@v3
+        with:
+            distribution: temurin
+            java-version: 17
+
 
       - name: Run a command inside the Docker container
-        run: ./gradlew clean assembleDebug -Dscan.tag.H${{ matrix.java }}-temurin -Dscan.tag.WORKAROUND_AGP_8.2.2_NEW
+        run: |
+          echo $HOME
+          echo $ENV LD_PRELOAD
+          ./gradlew clean assembleDebug -Dscan.tag.H${{ matrix.java }}-temurin -Dscan.tag.WORKAROUND_AGP_8.2.2_NEW
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GE_API_KEY }}
           AGENT_JAVA_VERSION: "${{ matrix.java }}-temurin"
