--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,6 +46,10 @@ jobs:
       - name: Run a command inside the Docker container
         run: |
           echo $HOME
+          echo $_GRADLE_VERSION
+          echo $PATH
+          echo $GRADLE_ZIP
+
           echo $LD_PRELOAD
           ./gradlew clean assembleDebug -Dscan.tag.H${{ matrix.java }}-temurin -Dscan.tag.WORKAROUND_AGP_8.2.2_NEW
         env:
